--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1"
+    "uglify-js-brunch": "~2.0.1",
+    "node-sass": "4.11.0"
   }
 }
