Update deploy settings

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,3 +1,10 @@
+# Elixir version
+elixir_version=1.9.1
+
+# Erlang version
+# available versions https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions
+erlang_version=22.0.3
+
 # https://github.com/HashNuke/heroku-buildpack-elixir#configuration
 # Always rebuild from scratch on every deploy?
 always_rebuild=true
