--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -2,3 +2,5 @@
 # Always rebuild from scratch on every deploy?
 always_rebuild=true
 config_vars_to_export=(DATABASE_URL PORT)
+
+node_version=13.6.0
