--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -1,7 +1,4 @@
-# https://github.com/gjaldon/heroku-buildpack-phoenix-static
-# Always rebuild from scratch on every deploy?
-always_rebuild=true
-config_vars_to_export=(DATABASE_URL PORT)
-
 node_version=13.6.0
 npm_version=7.20.6
+
+clean_cache=true
