--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -9,3 +9,7 @@ erlang_version=24.3
 # Always rebuild from scratch on every deploy?
 always_rebuild=true
 config_vars_to_export=(DATABASE_URL PORT)
+
+# Invoke assets.deploy defined in your mix.exs to deploy assets with esbuild
+# Note we nuke the esbuild executable from the image
+hook_post_compile="eval mix assets.deploy && rm -f _build/esbuild*"
