--- a/app.json
+++ b/app.json
@@ -1,17 +1,17 @@
 {
-  "name": "Cenatus",
-  "description": "A creative technology production company",
+  "name": "matt spendlove",
+  "description": "art, music, sound design",
   "repository": "https://github.com/msp/cenatus-ltd",
   "keywords": [
     "elixir",
     "phoenix",
     "cenatus"
   ],
-  "website": "https://cenatus.org/",
+  "website": "https://mattspendlove.com",
   "addons": [
     "heroku-postgresql:hobby-dev"
   ],
-  "stack": "heroku-20",
+  "stack": "heroku-22",
   "env": {
     "MIX_ENV": "test",
     "SECRET_KEY_BASE": {
